# FreeGCS

./: .gitignore  BuildLib.bat  CMakeLists.txt  FetchExternal.bat  Vcpkg.bat
Include/: Constraints.hxx  GCS.hxx  Geo.hxx  SubSystem.hxx  Util.hxx
Src/: Constraints.cxx  GCS.cxx  Geo.cxx  SubSystem.cxx
